--- a/calculation.html
+++ b/calculation.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semester GPA Calculation</title>
-    <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/reset.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="../css/calculation.css">
+    <link rel="stylesheet" href="./css/calculation.css">
 </head>
 
 <body>
@@ -184,7 +184,7 @@
         <button onclick="calculateGPA()" id="calculatebtn">Calculate</button>
 
         <div class="below-calc-link">
-            <a href="../cumulative.html">Want to calculate your <b>cumulative GPA</b>?</a>
+            <a href="./cumulative.html">Want to calculate your <b>cumulative GPA</b>?</a>
           </div>
 
         <!-- <p id="result"></p> -->
@@ -210,7 +210,8 @@
         <h4><i class='bx bx-copyright'></i>All Rights Reserved 2025</h4>
     </footer>
 
-    <script src="../js/calculation.js"></script>
+    <script src="./js/calculation.js"></script>
 </body>
+
 
 </html>
