--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </section> -->
 
         <section id="buttonsSec">
-            <a href="../calculation.html" class="button" id="buttonSem">
+            <a href="./calculation.html" class="button" id="buttonSem">
                 Calculate <span class="bold-text">Semester</span> GPA
             </a>
         
-            <a href="../cumulative.html" class="button" id="buttonCum">
+            <a href="./cumulative.html" class="button" id="buttonCum">
                 Calculate <span class="bold-text">Cumulative</span> GPA
             </a>
         </section>
@@ -82,3 +82,4 @@
 
 
 </html>
+
